# lsystem-explorer

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/core/: config.rs  genotype.rs  mod.rs  presets.rs
src/logic/: derivation.rs
src/ui/: editor.rs  editor_utils.rs  mod.rs  nursery.rs
src/visuals/: assets.rs  export.rs  mesher.rs  mod.rs  nursery_render.rs  scene.rs  skeleton.rs  turtle.rs
tests/: test_derivation_pipeline.rs  test_presets.rs  test_render_pipeline.rs
tests/common/: mod.rs
