[package]
name = "lsystem-explorer"
version = "0.1.4"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
bevy_panorbit_camera = { version = "0.34", features = ["bevy_egui"] }
symbios = "1.3"
symbios-turtle-3d = "0.3"
symbios-genetics = "0.1"
bevy_symbios = { version = "0.2", features = [
    "egui",
] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand_pcg = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.82", features = [
    "Document",
    "Window",
    "HtmlElement",
    "HtmlAnchorElement",
    "Blob",
    "Url",
    "BlobPropertyBag",
    "Clipboard",
    "ClipboardEvent",
    "Navigator",
] }
wasm-bindgen = "0.2.108"
js-sys = "0.3.82"
